[package]
name = "totp-lite"
version = "1.0.2"
authors = ["Colin Woodbury <colin@fosskers.ca>"]
edition = "2018"
description = "A simple, correct TOTP library."
homepage = "https://github.com/fosskers/totp-lite"
repository = "https://github.com/fosskers/totp-lite"
readme = "README.md"
license = "MIT"
keywords = ["authentication", "totp", "otp", "2fa"]
categories = ["authentication"]

[badges]
github = { repository = "fosskers/totp-lite", branch = "master", workflow = "Rust" }

[dependencies]
digest = "0.9"
hmac = "0.11"
sha-1 = "0.9"
sha2 = "0.9"

[dev-dependencies]
version-sync = "0.9"
